# raft_for_beginners_too

./: Cargo.toml  README.md  run.rb
examples/: simple.rs
src/: config.rs  lib.rs  main.rs  mod.rs
src/connection/: dummy.rs  mod.rs  udp.rs
src/journal/: mem.rs  mod.rs  snapshot.rs
src/raft/: candidate.rs  follower.rs  leader.rs  mod.rs  state.rs
