[package]
name = "raft_for_beginners_too"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
clap = { version = "3", features = ["derive"] }
derive_more = "0.99.17"
pin-project = "1.0.12"
rand = "0.8.5"
rmp-serde = "1.1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
